--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GPL",
   "scripts": {
     "serve": "cross-env MEASURE=true vue-cli-service serve",
-    "build": "vue-cli-service build ",
+    "build": "cross-env MEASURE=false vue-cli-service build",
     "dll": "webpack --config build/webpack.dll.config.js"
   },
   "dependencies": {
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.2.47",
+    "add-asset-html-webpack-plugin": "^5.0.2",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
