--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "add-asset-html-webpack-plugin": "^5.0.2",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
+    "image-webpack-loader": "^8.1.0",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
     "speed-measure-webpack-plugin": "^1.5.0",
